--- a/demo.ipynb
+++ b/demo.ipynb
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "from data import get_data\n",
     "from feature import plot_important_features_prefixspan\n",
-    "from conversion import convertor_review\n",
+    "from conversion import converter_review\n",
     "from divergence import analyze_divergence\n",
     "\n",
     "###################################################################\n",
@@ -75,14 +75,17 @@
     "# Prefix Span: Graph of Sequence Importance\n",
     "print('Sequence Importance in Conversions')\n",
     "plot_important_features_prefixspan(data.copy(), top_n=30, min_freq=min_freq, min_seq_len=min_seq_len)\n",
+    "print()\n",
     "\n",
-    "# Convertor Review: Sequence Patterns of Similarity and Anomalies in Non-Convertors that are clustered with Convertors\n",
+    "# Converter Review: Sequence Patterns of Similarity and Anomalies in Non-Converters that are clustered with Converters\n",
     "print('Sequence patterns for non-converting users that are similar to or unique from converting users')\n",
-    "convertor_review(data.copy(), top_n=10, reducer=\"pca\")\n",
+    "converter_review(data.copy(), top_n=10, reducer=\"pca\")\n",
+    "print()\n",
     "\n",
     "# Divergence: Sequence Patterns where Non-Convertors Diverge from Convertors\n",
     "print('Top Sequences where non-converting users followed a path that diverged from converting users')\n",
     "results_df = analyze_divergence(data.copy(), top_n=15, min_freq=min_freq, min_seq_len=min_seq_len)\n",
+    "print()\n",
     "\n",
     "for i, row in results_df.iterrows():\n",
     "\n",
